[package]
name = "progress_test"
version = "0.1.0"
authors = ["techno-tanoC <develop.tanoc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
tokio = { version = "0.2.20", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["compat"] }
reqwest = { version = "0.10.4", features = ["stream", "native-tls-vendored"] }
